refactor : getURI -> InputStream